# forsyde-ros-gazebo-worlds

./: CMakeLists.txt  package.xml
launch/: dstarlite_maze.launch  dstarlite_omni.launch
rob_pkg/omni_robot/launch/: spawn_urdf.launch
rob_pkg/omni_robot/urdf/: my_model.xacro
urdf/: omni_robot_forsyde.xacro
worlds/: dstarlite_maze.world
