<?xml version="1.0"?>
<package format="2">
  <name>dstarlite_maze</name>
  <version>1.0.0</version>
  <description>Gazebo maze world for D*-Lite self-aware CPS thesis</description>
  <maintainer email="vzpmoho@gmail.com">Mohammad</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rob_pkg</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
</package>
